Update workflow to push on release.

--- a/Orleans.Serialization.NodaTime/Orleans.Serialization.NodaTime.csproj
+++ b/Orleans.Serialization.NodaTime/Orleans.Serialization.NodaTime.csproj
@@ -5,6 +5,9 @@
     <Nullable>enable</Nullable>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <RootNamespace>Orleans.Serialization.NodaTime</RootNamespace>
+    <Version>0.0.1-alpha</Version>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
