--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -1,15 +1,29 @@
-name: Build and test Orleans.Serialization.NodaTime
+name: .NET CI
 
-on: [push]
+on:
+  workflow_dispatch:
+  push:
+  pull_request:
+    branches:
+      - master
 
 jobs:
   deploy:
-      name: deploy docker app
+      name: Build, test and publish on release
       runs-on: ubuntu-latest
       steps:
         - uses: actions/checkout@v3
+
         - uses: actions/setup-dotnet@v3
           with:
             dotnet-version: '7.0.x'
+
         - run: dotnet test 
+
+        - name: dotnet pack
+          run: dotnet pack **/Orleans.Serialization.NodaTime.csproj
+
+        - name: nuget push
+          if: startsWith(github.ref, 'refs/tags/release-')
+          run: nuget push **/Orleans.Serialization.NodaTime*.nupkg -Source 'https://api.nuget.org/v3/index.json' -ApiKey ${{secrets.NUGET_API_KEY}}
 
