--- a/Orleans.Serialization.NodaTime/Orleans.Serialization.NodaTime.csproj
+++ b/Orleans.Serialization.NodaTime/Orleans.Serialization.NodaTime.csproj
@@ -11,5 +11,9 @@
     <PackageReference Include="Microsoft.Orleans.Serialization" Version="7.1.1" />
     <PackageReference Include="NodaTime" Version="3.1.9" />
   </ItemGroup>
-  
+
+  <ItemGroup>
+    <None Include="../README.md" Pack="true" PackagePath="/"/>
+  </ItemGroup>
+
 </Project>
