--- a/Orleans.Serialization.NodaTime/Orleans.Serialization.NodaTime.csproj
+++ b/Orleans.Serialization.NodaTime/Orleans.Serialization.NodaTime.csproj
@@ -1,9 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <AnalysisMode>All</AnalysisMode>
     <RootNamespace>Orleans.Serialization.NodaTime</RootNamespace>
     <Version>0.0.1-alpha</Version>
     <PackageReadmeFile>README.md</PackageReadmeFile>
@@ -11,8 +12,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Orleans.Serialization" Version="7.1.1" />
-    <PackageReference Include="NodaTime" Version="3.1.9" />
+    <PackageReference Include="Microsoft.Orleans.Serialization" Version="8.0.0" />
+    <PackageReference Include="NodaTime" Version="3.1.10" />
   </ItemGroup>
 
   <ItemGroup>
