--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -3,6 +3,8 @@ name: .NET CI
 on:
   workflow_dispatch:
   push:
+    branches:
+      - master
     tags:
       - 'release/*'
   pull_request:
@@ -18,7 +20,7 @@ jobs:
 
         - uses: actions/setup-dotnet@v3
           with:
-            dotnet-version: '7.0.x'
+            dotnet-version: '8.0.x'
 
         - run: dotnet test 
 
