--- a/Orleans.Serialization.NodaTime/Orleans.Serialization.NodaTime.csproj
+++ b/Orleans.Serialization.NodaTime/Orleans.Serialization.NodaTime.csproj
@@ -6,7 +6,7 @@
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <AnalysisMode>All</AnalysisMode>
     <RootNamespace>Orleans.Serialization.NodaTime</RootNamespace>
-    <Version>0.0.3-alpha</Version>
+    <Version>0.0.4-beta</Version>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
