--- a/Orleans.Serialization.NodaTime/Orleans.Serialization.NodaTime.csproj
+++ b/Orleans.Serialization.NodaTime/Orleans.Serialization.NodaTime.csproj
@@ -1,12 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFrameworks>net8.0;net9.0;net10.0</TargetFrameworks>
     <Nullable>enable</Nullable>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <AnalysisMode>All</AnalysisMode>
     <RootNamespace>Orleans.Serialization.NodaTime</RootNamespace>
-    <Version>0.0.4-beta</Version>
+    <Version>1.0.0</Version>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
